fix: align cart button

--- a/styles/components/header/cart-button.css
+++ b/styles/components/header/cart-button.css
@@ -2,6 +2,7 @@
   padding-top: 0px;
   padding-bottom: 0px;
   gap: 5px;
+  height: 39px;
 }
 .cart-button__icon {
   position: relative;
