--- a/styles/components/header/header.css
+++ b/styles/components/header/header.css
@@ -29,7 +29,6 @@
   gap: 20px;
   justify-content: end;
   align-items: center;
-  height: 39px;
 }
 
 .header-actions__search-bar {
